# covscript-network

./: .gitignore  .gitmodules  ARGPARSE.md  CMakeLists.txt  CNI_API.md  NETUTILS.md  Protocol.md  README.md  argparse.csp  argparse.csym  argparse.ecs  async_tcp_echo_server.cpp  async_udp_echo_server.cpp  blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp  curl_wrapper.cpp  curl_wrapper.hpp  make.bat  make.sh  netutils.csp  netutils.csym  netutils.ecs  network.cpp  network.hpp  run_tests.bat  run_tests.sh  test_client.cpp  test_client.csc  test_server.cpp  test_server.csc  tmp_typeid_null.ecs
.github/workflows/: ci.yml
asio/: async_result.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_waitable_timer.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  deadline_timer.hpp  deadline_timer_service.hpp  error_code.hpp  handler_type.hpp  high_resolution_timer.hpp  is_write_buffered.hpp  raw_socket_service.hpp  read.hpp  read_until.hpp  serial_port.hpp  serial_port_base.hpp  serial_port_service.hpp  signal_set.hpp  signal_set_service.hpp  socket_base.hpp  stream_socket_service.hpp  streambuf.hpp  thread.hpp  use_future.hpp  write.hpp
asio/detail/: array.hpp  atomic_count.hpp  base_from_completion_cond.hpp  bind_handler.hpp  chrono_time_traits.hpp  consuming_buffers.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_write_op.hpp  epoll_reactor.hpp  event.hpp  fd_set_adapter.hpp  fenced_block.hpp  function.hpp  gcc_arm_fenced_block.hpp  handler_cont_helpers.hpp  handler_type_requirements.hpp  keyword_tss_ptr.hpp  kqueue_reactor.hpp  local_free_on_block_exit.hpp  macos_fenced_block.hpp  null_event.hpp  null_signal_blocker.hpp  null_socket_service.hpp  null_static_mutex.hpp  null_tss_ptr.hpp  object_pool.hpp  old_win_sdk_compat.hpp  operation.hpp  pop_options.hpp  posix_event.hpp  posix_fd_set_adapter.hpp  posix_signal_blocker.hpp  posix_tss_ptr.hpp  push_options.hpp  reactive_descriptor_service.hpp  reactive_null_buffers_op.hpp  reactive_serial_port_service.hpp  (+49 more)
asio/impl/: buffered_read_stream.hpp  io_service.hpp  read_at.hpp  read_until.hpp  serial_port_base.hpp  write.hpp
asio/ip/: address.hpp  address_v4.hpp  basic_resolver_query.hpp  host_name.hpp  icmp.hpp  multicast.hpp  resolver_service.hpp  udp.hpp  unicast.hpp  v6_only.hpp
asio/local/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp
asio/posix/: descriptor_base.hpp  stream_descriptor.hpp  stream_descriptor_service.hpp
asio/ssl/: basic_context.hpp  context_base.hpp  stream.hpp  stream_base.hpp  stream_service.hpp  verify_context.hpp
asio/windows/: basic_handle.hpp  basic_random_access_handle.hpp  object_handle.hpp  random_access_handle.hpp  random_access_handle_service.hpp  stream_handle.hpp
csbuild/: argparse.json  argparse_csym.json  build_ecs.csc  netutils.json  netutils_csym.json  network.json
docs/: async-architecture.md
examples/: SIMPLE_TLS.md  argparse.ecs  build_ecs.sh  distributed_config.json  http_server.ecs  setup_macos.sh  simple_config.json  simple_tls.ecs  spawn_http_server.ecs  tls_client.ecs  tls_keygen.ecs  tls_server.ecs
include/: network.hpp
include/asio/: basic_serial_port.hpp  basic_socket_iostream.hpp  basic_streambuf_fwd.hpp  buffer.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffers_iterator.hpp  completion_condition.hpp  connect.hpp  coroutine.hpp  datagram_socket_service.hpp  error.hpp  handler_alloc_hook.hpp  handler_continuation_hook.hpp  handler_invoke_hook.hpp  io_service.hpp  is_read_buffered.hpp  placeholders.hpp  read_at.hpp  seq_packet_socket_service.hpp  spawn.hpp  (+9 more)
tests/: index.html  multi-node-server.ecs  multi-node-spawner.ecs  test-concurrent.sh  test_argparse.csc  test_async_tcp.csc  test_call_deepseek.ecs  test_client.csc  test_deepseek.csc  test_error_paths.csc  test_fiber_socket.csc  test_header_parser.csc  test_http_client.csc  test_http_client_header_parser.ecs  test_http_client_parse_url.ecs  test_http_compliance.csc  test_http_roundtrip.csc  test_http_server.csc  test_master_slave.csc  test_openai_client.csc  test_openai_client_oop.ecs  test_proxy.csc  test_server.csc  test_simple_client.ecs  test_simple_server.ecs  test_stress_concurrent.csc  test_stress_keepalive.csc  test_stress_master_slave.csc  test_tcp_sync.csc  test_tls_errors.csc  test_tls_trust.csc  test_tls_trust_self_check.ecs  test_udp.csc  test_url_parse.csc  test_utils.csc
(+209 files in other folders)
